release/1.6.1/VERSION.md
# 1.6.1

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.6.1```   |
| Release Time   | ```2013-06-28T14:48:41+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```legacy```   |
| sha1   | ```770572e819335b6c0a053f8378ad88eda189fc14```   |
| size   | ```109634```   |
| total size  | ```153475165```  |
| url       | ```https://launchermeta.mojang.com/v1/packages/770572e819335b6c0a053f8378ad88eda189fc14/legacy.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```17e2c28fb54666df5640b2c822ea8042250ef592```   |
| size   | ```4726671```   |
| url       | ```https://launcher.mojang.com/v1/objects/17e2c28fb54666df5640b2c822ea8042250ef592/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```0252918a5f9d47e3c6eb1dfec02134d1374a89b4```   |
| size   | ```6132004```   |
| url       | ```https://launcher.mojang.com/v1/objects/0252918a5f9d47e3c6eb1dfec02134d1374a89b4/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```Unavailable```   |
| version   | ```Unavailable```   |